--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body class="menu-position-side menu-side-left full-screen with-content-panel">
     
-    <div class="table-responsive">
+    <div class="table-responsive" style="background-color:#fff;">
        <table class="table hover-table">
          <tr>
            <th>SL</th>
