--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   </head>
   <body class="menu-position-side menu-side-left full-screen with-content-panel">
     
-    <div class="table-responsive" style="background-color:#fff;">
-       <table class="table hover-table">
+    <div class="table-responsive" style="background-color:#fff;padding:40px 20px;">
+       <table class="table table-hover" style="border:2px solid #eee;">
          <tr>
            <th>SL</th>
            <th>Page Name</th>
