--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
     
     <div class="table-responsive" style="background-color:#fff;padding:40px 20px;">
        <table class="table table-hover" style="border:2px solid #eee;">
-         <tr>
-           <th>SL</th>
-           <th>Page Name</th>
-           <th>Click to View</th>
-         </tr>
+         <thead class="thead-dark">
+           <tr>
+             <th>SL</th>
+             <th>Page Name</th>
+             <th>Click to View</th>
+           </tr>
+         </thead>
          
          <tr>
            <td>1</td>
