--- a/index.html
+++ b/index.html
@@ -47,77 +47,77 @@
          <tr>
            <td>1</td>
            <td>Sign Up </td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/signup.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/signup.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>2</td>
            <td>Login</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/login.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/login.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>3</td>
            <td>Invite Team Member</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/inviteTeamMember.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/inviteTeamMember.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>4</td>
            <td>Reset Password</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/resetPassword.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/resetPassword.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>5</td>
            <td>Update Password</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/updatePassword.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/updatePassword.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>6</td>
            <td>Account Closing</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/accountClosing.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/accountClosing.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>7</td>
            <td>Sales Dashboard</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/sales_dashboard.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/sales_dashboard.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>8</td>
            <td>Member User List</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/memberUserList.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/memberUserList.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>9</td>
            <td>Categories</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/Categories.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/Categories.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>10</td>
            <td>Business Information</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/businessInformation.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/businessInformation.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>11</td>
            <td>Update Business Information</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/updateBusinessInformation.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/updateBusinessInformation.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>12</td>
            <td>Projects</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/projects.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/projects.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>13</td>
            <td>New Projects</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/newProject.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/newProject.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>14</td>
            <td>Release Notes</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/releaseNotes.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/releaseNotes.html" target="_blank">Click Here</a></td>
          </tr>
          <tr>
            <td>15</td>
            <td>Back To Release Notes</td>
-           <td><a href="https://kawsar01822.github.io/shiftRelease/backToReleaseNotes.html">Click Here</a></td>
+           <td><a href="https://kawsar01822.github.io/shiftRelease/backToReleaseNotes.html" target="_blank">Click Here</a></td>
          </tr>
        </table>
     </div>
